--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "xconsolapi",
+  "name": "retailapi",
   "version": "1.0.0",
   "description": "api for xconsol retail store",
   "main": "index.js",
