--- a/app.yaml
+++ b/app.yaml
@@ -12,6 +12,6 @@
 # limitations under the License.
 
 # [START gae_quickstart_yaml]
-runtime: nodejs12,
-nodemon: 2.0.4
+runtime: nodejs
+
 # [END gae_quickstart_yaml]
